Redo Fix #170: [CSS] Overflow on very tiny viewport.

--- a/stylesheets/site/_home.scss
+++ b/stylesheets/site/_home.scss
@@ -342,14 +342,17 @@
   form {
     .form-group {
       #newsletter-email {
+        height: auto;
         width: 20rem;
         max-width: 100%;
-        margin-right: 1rem;
+        padding: 13px;
+        box-sizing: border-box;
       }
       #newsletter-submit {
         @extend .btn;
         @extend .btn-default;
         @extend .btn-lg;
+        margin-left: 1rem;
         color: $sti-white;
         background-color: #ff4c0d;
         border: none;
@@ -606,27 +609,26 @@
 }
 
 .footerlogos {
-  ul {
-    width: 100%;
-  	margin: 0;
-  	padding: 0;
-  	list-style: none;
-  	text-align: center;
-  	margin: 0;
-  }
+  width: 100%;
+  margin: 0 0 30px;
+  padding: 0;
+  list-style: none;
+  text-align: center;
 }
 
 .footerlogos > li {
-	display:inline-block;
-	margin: 15px;
-	text-align:center;
+  display:inline-block;
+  margin: 15px;
+  text-align:center;
 }
 
 .footerlogos a {
-	color: $sti-white;
-	text-decoration:none;
-	font-size: .9em;
+  color: $sti-white;
+  text-decoration:none;
+  font-size: .9em;
   img {
-    max-height: 70px;
+    height: 70px;
+    max-width: 100%;
+    box-sizing: border-box;
   }
 }
